<feat>: add fork.md

--- a/kernel/task/1.进程的诞生/2. fork.md
+++ b/kernel/task/1.进程的诞生/2. fork.md
@@ -565,3 +565,251 @@ fork_out:
 多个线程共享一个PID，但是Linux内核为每个线程和进程都同等对待地分配了PID。为了满足POSIX协议，Linux内核实现了一个线程组的概念( thread group)。sys_getpid()系统调用返回线程组ID(tgid，thread group id)， sys_gettid()返回线程的PID。CLONE_SIGHAND表示父子进程共享相同的信号处理表，因此CLONE_THREAD和CLONE_SIGHAND两个标志位是最佳拍档，还有CLONE_VM也是。
 
 CLONE_PARENT 表示新创建的进程是兄弟关系，而不是父子关系，它们拥有相同的父进程。对于Linux内核来说，进程的“鼻祖”是idle进程，也称为swapper进程;但对用户空间来说，进程的“鼻祖”是init进程，所有用户空间进程都由init进程创建和派生。只有init进程才会设置SIGNAL_UNKILLABLE标志位。如果init进程或者容器init进程要使用CLONE_PARENT创建兄弟进程，那么该进程无法由init进程回收，父进程 idle进程也无能为力，因此它会变成僵尸进程（zombie） 。
+
+CLONE_NEWPID表示创建一个新的PID namespace。在没有PID namespace之前，进程唯一的标识是PID，在引入PID namespace之后，标识一个进程需要PID namespace和PID双重认证。CLONE_NEWUSER、CLONE_NEWPID和CLONE_SIGHAND 共享信号会有冲突。
+
+上述标志位涉及到命名空间技术(namespace)。命名空间技术主要是做访问隔离，其原理是针对一类资源进行抽象，并将其封装在一起提供给一个容器( container）来使用。每个容器都有自己的抽象，它们彼此之间不可见，因此访问是隔离的。
+
+dup_task_struct()函数会分配一个 task_struct实例。
+
+```
+static struct task_struct *dup_task_struct(struct task_struct *orig)
+{
+	struct task_struct *tsk;
+	struct thread_info *ti;
+	int node = tsk_fork_get_node(orig);
+	int err;
+
+	tsk = alloc_task_struct_node(node);
+	if (!tsk)
+		return NULL;
+
+	ti = alloc_thread_info_node(tsk, node);
+	if (!ti)
+		goto free_tsk;
+
+	err = arch_dup_task_struct(tsk, orig);
+	if (err)
+		goto free_ti;
+
+	tsk->stack = ti;
+#ifdef CONFIG_SECCOMP
+	/*
+	 * We must handle setting up seccomp filters once we're under
+	 * the sighand lock in case orig has changed between now and
+	 * then. Until then, filter must be NULL to avoid messing up
+	 * the usage counts on the error path calling free_task.
+	 */
+	tsk->seccomp.filter = NULL;
+#endif
+
+	setup_thread_stack(tsk, orig);
+	clear_user_return_notifier(tsk);
+	clear_tsk_need_resched(tsk);
+	set_task_stack_end_magic(tsk);
+
+#ifdef CONFIG_CC_STACKPROTECTOR
+	tsk->stack_canary = get_random_int();
+#endif
+
+	/*
+	 * One for us, one for whoever does the "release_task()" (usually
+	 * parent)
+	 */
+	atomic_set(&tsk->usage, 2);
+#ifdef CONFIG_BLK_DEV_IO_TRACE
+	tsk->btrace_seq = 0;
+#endif
+	tsk->splice_pipe = NULL;
+	tsk->task_frag.page = NULL;
+
+	account_kernel_stack(ti, 1);
+
+	return tsk;
+
+free_ti:
+	free_thread_info(ti);
+free_tsk:
+	free_task_struct(tsk);
+	return NULL;
+}
+```
+
+首先分配一个struct task_struct和 struct thread_info数据结构实例。struct task_struct是描述进程的核心数据结构，计算机术语称为进程控制块，主要用于描述进程的状态信息和控制信息。struct task_struct数据结构定义在 include/linux/sched.h文件中。struct thread_info数据结构用于存储进程描述符频繁访问和硬件快速访问的字段，它的定义依赖于具体体系结构的实现，例如ARM32体系结构其定义在 arch/arm/include/asm/thread_info.h头文件中。
+
+第15行代码，把父进程的task_struct数据结构的内容复制到子进程的task_struct结构中。struct task struct数据结构有一个成员stack指向 struct thread_info实例，struct thread_info数据结构中也有一个成员task指针指向 task_struct 数据结构。
+
+第20行代码，把父进程的struct thread_info数据结构的内容复制到子进程的thread_info中。第22行代码，清除thread_info-> flags 中的TIF_NEED_RESCHED标志位，因为新进程还没有完全诞生，不希望现在被调度。
+
+下面继续来看copy _process()函数。
+
+```
+	retval = -EAGAIN;
+	if (atomic_read(&p->real_cred->user->processes) >=
+			task_rlimit(p, RLIMIT_NPROC)) {
+		if (p->real_cred->user != INIT_USER &&
+		    !capable(CAP_SYS_RESOURCE) && !capable(CAP_SYS_ADMIN))
+			goto bad_fork_free;
+	}
+	current->flags &= ~PF_NPROC_EXCEEDED;
+
+	retval = copy_creds(p, clone_flags);
+	if (retval < 0)
+		goto bad_fork_free;
+
+	retval = -EAGAIN;
+	if (nr_threads >= max_threads)
+		goto bad_fork_cleanup_count;
+```
+
+第10行代码，复制父进程的证书。15行代码，max_threads表示当前系统最多可以拥有的进程个数，这个值由系统内存大小来决定，详见fork_init()函数。nr_threads是系统的一个全局变量，如果系统已经分配了超过系统最大进程数目，那么分配将失败。上述两个全局变量都定义在 fork.c文件中。
+
+```
+[kerne1/fork.c]
+int nr_threads; /* The idle threads do not count. */
+int max_threads; / *tunable limit on nr_threads*/
+```
+
+这两个值为什么不使用read_mostly来修饰呢﹖特别是max_threads变量经常会被使用。read_mostly修饰的变量会放入.data.read_mostly段中，在内核加载时放入相应的cache中，以便提高效率，笔者认为这可能是内核代码的遗漏。
+
+```
+delayacct_tsk_init(p);	/* Must remain after dup_task_struct() */
+	p->flags &= ~(PF_SUPERPRIV | PF_WQ_WORKER);
+	p->flags |= PF_FORKNOEXEC;
+	INIT_LIST_HEAD(&p->children);
+	INIT_LIST_HEAD(&p->sibling);
+	rcu_copy_process(p);
+	p->vfork_done = NULL;
+	spin_lock_init(&p->alloc_lock);
+
+	init_sigpending(&p->pending);
+
+	p->utime = p->stime = p->gtime = 0;
+	p->utimescaled = p->stimescaled = 0;
+#ifndef CONFIG_VIRT_CPU_ACCOUNTING_NATIVE
+	p->prev_cputime.utime = p->prev_cputime.stime = 0;
+#endif
+#ifdef CONFIG_VIRT_CPU_ACCOUNTING_GEN
+	seqlock_init(&p->vtime_seqlock);
+	p->vtime_snap = 0;
+	p->vtime_snap_whence = VTIME_SLEEPING;
+#endif
+
+#if defined(SPLIT_RSS_COUNTING)
+	memset(&p->rss_stat, 0, sizeof(p->rss_stat));
+#endif
+
+	p->default_timer_slack_ns = current->timer_slack_ns;
+
+	task_io_accounting_init(&p->ioac);
+	acct_clear_integrals(p);
+
+	posix_cpu_timers_init(p);
+
+	p->start_time = ktime_get_ns();
+	p->real_start_time = ktime_get_boot_ns();
+	p->io_context = NULL;
+	p->audit_context = NULL;
+	if (clone_flags & CLONE_THREAD)
+		threadgroup_change_begin(current);
+	cgroup_fork(p);
+#ifdef CONFIG_NUMA
+	p->mempolicy = mpol_dup(p->mempolicy);
+	if (IS_ERR(p->mempolicy)) {
+		retval = PTR_ERR(p->mempolicy);
+		p->mempolicy = NULL;
+		goto bad_fork_cleanup_threadgroup_lock;
+	}
+#endif
+#ifdef CONFIG_CPUSETS
+	p->cpuset_mem_spread_rotor = NUMA_NO_NODE;
+	p->cpuset_slab_spread_rotor = NUMA_NO_NODE;
+	seqcount_init(&p->mems_allowed_seq);
+#endif
+#ifdef CONFIG_TRACE_IRQFLAGS
+	p->irq_events = 0;
+	p->hardirqs_enabled = 0;
+	p->hardirq_enable_ip = 0;
+	p->hardirq_enable_event = 0;
+	p->hardirq_disable_ip = _THIS_IP_;
+	p->hardirq_disable_event = 0;
+	p->softirqs_enabled = 1;
+	p->softirq_enable_ip = _THIS_IP_;
+	p->softirq_enable_event = 0;
+	p->softirq_disable_ip = 0;
+	p->softirq_disable_event = 0;
+	p->hardirq_context = 0;
+	p->softirq_context = 0;
+#endif
+#ifdef CONFIG_LOCKDEP
+	p->lockdep_depth = 0; /* no locks held yet */
+	p->curr_chain_key = 0;
+	p->lockdep_recursion = 0;
+#endif
+
+#ifdef CONFIG_DEBUG_MUTEXES
+	p->blocked_on = NULL; /* not blocked yet */
+#endif
+#ifdef CONFIG_BCACHE
+	p->sequential_io	= 0;
+	p->sequential_io_avg	= 0;
+#endif
+```
+
+如果开启了CONFIG_TASK_DELAY_ACCT，那么进程task_struct中的delays成员记录等待相关的统计数据供用户空间程序使用。第59～60行代码，task_struct数据结构中有一个成员flags用于存放进程重要的标志位,这些标志位定义在include/linux/sched.h文件中。这里首先取消使用超级用户权限并告诉系统这不是一个worker线程，worker线程由工作队列机制创建，另外设置PF_FORKNOEXEC 标志位，这个进程暂时还不能执行。
+
+进程常用的标志位定义如下:
+
+```
+/*
+ * Per process flags
+ */
+#define PF_EXITING	0x00000004	/* getting shut down */
+#define PF_EXITPIDONE	0x00000008	/* pi exit done on shut down */
+#define PF_VCPU		0x00000010	/* I'm a virtual CPU */
+#define PF_WQ_WORKER	0x00000020	/* I'm a workqueue worker */
+#define PF_FORKNOEXEC	0x00000040	/* forked but didn't exec */
+#define PF_MCE_PROCESS  0x00000080      /* process policy on mce errors */
+#define PF_SUPERPRIV	0x00000100	/* used super-user privileges */
+#define PF_DUMPCORE	0x00000200	/* dumped core */
+#define PF_SIGNALED	0x00000400	/* killed by a signal */
+#define PF_MEMALLOC	0x00000800	/* Allocating memory */
+#define PF_NPROC_EXCEEDED 0x00001000	/* set_user noticed that RLIMIT_NPROC was exceeded */
+#define PF_USED_MATH	0x00002000	/* if unset the fpu must be initialized before use */
+#define PF_USED_ASYNC	0x00004000	/* used async_schedule*(), used by module init */
+#define PF_NOFREEZE	0x00008000	/* this thread should not be frozen */
+#define PF_FROZEN	0x00010000	/* frozen for system suspend */
+#define PF_FSTRANS	0x00020000	/* inside a filesystem transaction */
+#define PF_KSWAPD	0x00040000	/* I am kswapd */
+#define PF_MEMALLOC_NOIO 0x00080000	/* Allocating memory without IO involved */
+#define PF_LESS_THROTTLE 0x00100000	/* Throttle me less: I clean memory */
+#define PF_KTHREAD	0x00200000	/* I am a kernel thread */
+#define PF_RANDOMIZE	0x00400000	/* randomize virtual address space */
+#define PF_SWAPWRITE	0x00800000	/* Allowed to write to swap */
+#define PF_NO_SETAFFINITY 0x04000000	/* Userland is not allowed to meddle with cpus_allowed */
+#define PF_MCE_EARLY    0x08000000      /* Early kill for mce process policy */
+#define PF_MUTEX_TESTER	0x20000000	/* Thread belongs to the rt mutex tester */
+#define PF_FREEZER_SKIP	0x40000000	/* Freezer should not count it as freezable */
+#define PF_SUSPEND_TASK 0x80000000      /* this thread called freeze_processes and should not be frozen */
+```
+
+p->children链表是新进程的子进程链表，p->sibling链表是新进程的兄弟进程链表。第63行代码，对 PREEMPT_RCU和 TASKS_RCU进行初始化。接下来是对进程task_struct数据结构的一些成员进行初始化，之前进程task_struct 数据结构的内容是从父进程复制过来的，但是作为新进程，有些内容还是要重新初始化。
+
+接下来看copy_process()函数。
+
+```
+/* Perform scheduler related setup. Assign this task to a CPU. */
+	retval = sched_fork(clone_flags, p);
+...
+	retval = copy_thread(clone_flags, stack_start, stack_size, p);
+	if (retval)
+		goto bad_fork_cleanup_io;
+```
+
+接下来是做内存空间、文件系统、信号系统、IO系统等核心内容的复制操作，这是fork进程的核心部分，我们分段来阅读，首先看sched_fork()函数。
+
+```
+[copy_process()->sched_fork()]
+
+```
+
