--- a/kernel/task/1.进程的诞生/2. fork.md
+++ b/kernel/task/1.进程的诞生/2. fork.md
@@ -1121,3 +1121,10 @@ fail_nomem:
 }
 ```
 
+dup_mm()函数首先为新进程分配一个描述内存空间的mm_struct 数据结构指针 mm,然后把父进程mm数据结构的内容复制到新进程的 mm_struct数据结构中。
+
+```
+[copy_mm()->dup_mm()->mm_init()]
+
+```
+
