--- a/kernel/task/1.进程的诞生/2. fork.md
+++ b/kernel/task/1.进程的诞生/2. fork.md
@@ -1601,3 +1601,131 @@ copy_thread(unsigned long clone_flags, unsigned long stack_start,
 }
 ```
 
+对于ARM体系结构，Linux内核栈顶存放着ARM 的通用寄存器，在代码中使用struct pt_regs 结构体表示。
+
+```
+#define task_pt_regs(p) \
+	((struct pt_regs *)(THREAD_SIZE + task_stack_page(p)) - 1
+struct pt_regs {
+	unsigned long uregs[18];
+};
+```
+
+如果新进程不是内核线程，那么将父进程的寄存器值复制到子进程中。thread _info数据结构中的cpu_context 成员保存着进程的上下文相关的通用寄存器。设置cpu_context中的pc和 sp 指针，pc指针指向ret_from_fork()函数，sp指向新进程的内核栈。tp_value用于设置线程用的局部存储TLS ( Thread Local Storage)。
+
+复制完内存空间和处理器相关寄存器后，下面继续看copy_process()函数。
+
+```
+if (pid != &init_struct_pid) {
+		retval = -ENOMEM;
+		pid = alloc_pid(p->nsproxy->pid_ns_for_children);
+		if (!pid)
+			goto bad_fork_cleanup_io;
+	}
+/* ok, now we should be set up.. */
+	p->pid = pid_nr(pid);
+	if (clone_flags & CLONE_THREAD) {
+		p->exit_signal = -1;
+		p->group_leader = current->group_leader;
+		p->tgid = current->tgid;
+	} else {
+		if (clone_flags & CLONE_PARENT)
+			p->exit_signal = current->group_leader->exit_signal;
+		else
+			p->exit_signal = (clone_flags & CSIGNAL);
+		p->group_leader = p;
+		p->tgid = p->pid;
+	}	
+	INIT_LIST_HEAD(&p->thread_group);
+	p->task_works = NULL;
+	if (likely(p->pid)) {
+		ptrace_init_task(p, (clone_flags & CLONE_PTRACE) || trace);
+
+		init_task_pid(p, PIDTYPE_PID, pid);
+		if (thread_group_leader(p)) {
+			init_task_pid(p, PIDTYPE_PGID, task_pgrp(current));
+			init_task_pid(p, PIDTYPE_SID, task_session(current));
+
+			if (is_child_reaper(pid)) {
+				ns_of_pid(pid)->child_reaper = p;
+				p->signal->flags |= SIGNAL_UNKILLABLE;
+			}
+
+			p->signal->leader_pid = pid;
+			p->signal->tty = tty_kref_get(current->signal->tty);
+			list_add_tail(&p->sibling, &p->real_parent->children);
+			list_add_tail_rcu(&p->tasks, &init_task.tasks);
+			attach_pid(p, PIDTYPE_PGID);
+			attach_pid(p, PIDTYPE_SID);
+			__this_cpu_inc(process_counts);
+		} else {
+			current->signal->nr_threads++;
+			atomic_inc(&current->signal->live);
+			atomic_inc(&current->signal->sigcnt);
+			list_add_tail_rcu(&p->thread_group,
+					  &p->group_leader->thread_group);
+			list_add_tail_rcu(&p->thread_node,
+					  &p->signal->thread_head);
+		}
+		attach_pid(p, PIDTYPE_PID);
+		nr_threads++;
+	}
+```
+
+init_struct pid是init_task进程的默认配置，新进程需要重新分配pid数据结构。分配完pid数据结构后，第166行代码获取新进程的真正pid。第167~178行代码设置线程组group_leader。最后增加两个全局变量的统计计数 nr_threads和 total_forks，返回新创建的进程的task_struct结构。
+
+回到do_fork主函数中。
+
+```
+long do_fork(unsigned long clone_flags,
+	      unsigned long stack_start,
+	      unsigned long stack_size,
+	      int __user *parent_tidptr,
+	      int __user *child_tidptr)
+	      p = copy_process(clone_flags, stack_start, stack_size,
+			 child_tidptr, NULL, trace);
+{
+	...
+	/*
+	 * Do this prior waking up the new thread - the thread pointer
+	 * might get invalid after that point, if the thread exits quickly.
+	 */
+	if (!IS_ERR(p)) {
+		struct completion vfork;
+		struct pid *pid;
+
+		trace_sched_process_fork(current, p);
+
+		pid = get_task_pid(p, PIDTYPE_PID);
+		nr = pid_vnr(pid);
+
+		if (clone_flags & CLONE_PARENT_SETTID)
+			put_user(nr, parent_tidptr);
+
+		if (clone_flags & CLONE_VFORK) {
+			p->vfork_done = &vfork;
+			init_completion(&vfork);
+			get_task_struct(p);
+		}
+
+		wake_up_new_task(p);
+
+		/* forking complete and child started to run, tell ptracer */
+		if (unlikely(trace))
+			ptrace_event_pid(trace, pid);
+
+		if (clone_flags & CLONE_VFORK) {
+			if (!wait_for_vfork_done(p, &vfork))
+				ptrace_event_pid(PTRACE_EVENT_VFORK_DONE, pid);
+		}
+
+		put_pid(pid);
+	} else {
+		nr = PTR_ERR(p);
+	}
+	return nr;
+}	
+```
+
+在 do_fork()主函数中，copy_process()函数成功创建了一个新的进程。对于 vfork 创建的子进程，首先要保证子进程先运行。在调用exec或exit之前，父子进程是共享数据的,在子进程调用exec或者exit之后,父进程才可以被调度运行,因此这里使用一个vfork_done完成量来达到扣留父进程的作用。第32行代码，wake_up_new_task()函数准备唤醒新创建的进程，也就是把进程加入调度器里接受调度运行。最后父进程返回用户空间时，其返回值为进程的pid，而子进程返回用户空间时，其返回值为0。
+
