--- a/kernel/task/2.CFS调度器/2.进程创建.md
+++ b/kernel/task/2.CFS调度器/2.进程创建.md
@@ -560,3 +560,89 @@ enqueue_task_fair(struct rq *rq, struct task_struct *p, int flags)
 }
 ```
 
+enqueue_task_fair()把新进程添加到CFS就绪队列中。第6行代码，for 循环对于没有定义FAIR_GROUP_SCHED的系统来说,其实是调度实体se。第10行代码, enqueue_entity()把调度实体se添加到cfs_rq就绪队列中。第18行代码，update_rq_runnable avg()更新该调度实体的负载load_avg_contrib和就绪队列的负载runnable_load_avg
+
+下面来看enqueue_entity()函数。
+
+```
+static void
+enqueue_entity(struct cfs_rq *cfs_rq, struct sched_entity *se, int flags)
+{
+	/*
+	 * Update the normalized vruntime before updating min_vruntime
+	 * through calling update_curr().
+	 */
+	if (!(flags & ENQUEUE_WAKEUP) || (flags & ENQUEUE_WAKING))
+		se->vruntime += cfs_rq->min_vruntime;
+
+	/*
+	 * Update run-time statistics of the 'current'.
+	 */
+	update_curr(cfs_rq);
+	enqueue_entity_load_avg(cfs_rq, se, flags & ENQUEUE_WAKEUP);
+	account_entity_enqueue(cfs_rq, se);
+	update_cfs_shares(cfs_rq);
+
+	if (flags & ENQUEUE_WAKEUP) {
+		place_entity(cfs_rq, se, 0);
+		enqueue_sleeper(cfs_rq, se);
+	}
+
+	update_stats_enqueue(cfs_rq, se);
+	check_spread(cfs_rq, se);
+	if (se != cfs_rq->curr)
+		__enqueue_entity(cfs_rq, se);
+	se->on_rq = 1;
+}
+```
+
+第7~8行代码，新进程是刚创建的，因此该进程的vruntime要加上min_vruntime。回想之前在 task_fork_fair()函数里vruntime 减去min_vruntime，这里又添加回来，因为task_fork_fair()只是创建进程还没有把该进程添加到调度器，区期间min_vruntime 已经反生变化，因此添加上 min_vruntime是比较准确的。
+
+第13行代码，update_curr()更新当前进程的vruntime和该CFS 就绪队列的min_vruntime。
+
+第14行代码，计算该调度实体se的平均负载load_avg_contrib,然后添加到整个CFS就绪队列的总平均负载cfs_rq->runnable_load_avg 中。
+
+第17～20行代码，处理刚被唤醒的进程，place_entity()对唤醒进程有一定的补偿，最多可以补偿一个调度周期的一半（默认值 sysctl_sched_latency/2，3毫秒)，即 vruntime 减去半个调度周期时间。
+
+第23行代码，\_\_enqueue_entity()把该调度实体添加到CFS就绪队列的红黑树中。
+
+第24行代码，设置该调度实体的on_rq成员为1，表示已经在CFS就绪队列中。se->on_rq经常会被用到，例如 update_entity_load_avg()函数。
+
+```
+static void __enqueue_entity(struct cfs_rq *cfs_rq, struct sched_entity *se)
+{
+	struct rb_node **link = &cfs_rq->tasks_timeline.rb_node;
+	struct rb_node *parent = NULL;
+	struct sched_entity *entry;
+	int leftmost = 1;
+
+	/*
+	 * Find the right place in the rbtree:
+	 */
+	while (*link) {
+		parent = *link;
+		entry = rb_entry(parent, struct sched_entity, run_node);
+		/*
+		 * We dont care about collisions. Nodes with
+		 * the same key stay together.
+		 */
+		if (entity_before(se, entry)) {
+			link = &parent->rb_left;
+		} else {
+			link = &parent->rb_right;
+			leftmost = 0;
+		}
+	}
+
+	/*
+	 * Maintain a cache of leftmost tree entries (it is frequently
+	 * used):
+	 */
+	if (leftmost)
+		cfs_rq->rb_leftmost = &se->run_node;
+
+	rb_link_node(&se->run_node, parent, link);
+	rb_insert_color(&se->run_node, &cfs_rq->tasks_timeline);
+}
+```
+
